[package]
name = "mushi"
version = "0.0.10"
edition = "2024"

authors = ["Félix Saparelli <felix@passcod.name>"]
description = "Point-to-point QUIC networking with application-defined mutual authentication"
documentation = "https://docs.rs/mushi"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/passcod/mushi"

[dependencies]
base65536 = "1.0.1"
bytes = "1.10.1"
idna = "1.0.3"
rcgen = "0.13.2"
ring = "0.17.14"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["sync"] }
tracing = "0.1.41"
url = "2.5.4"
web-transport-quinn = { version = "0.6.1", default-features = false, features = ["ring"], package = "passcod-web-transport-quinn" }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"

