[package]
name = "mushi"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mushi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
mushi = { version = "0.0.10", path = "../lib" }
thiserror = "2.0.12"
