[package]
name = "mushi-python"
version = "0.0.0"
edition = "2024"

[lib]
name = "pymushi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
pyo3-async-runtimes = { version = "0.24.0", features = ["attributes", "tokio-runtime"] }
mushi = { version = "0.0.12", path = "../lib" }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync"] }
